--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Campo×Cidade. Projeto Agrinho - Todos os direitos reservados.</p>
+                <p>&copy; Desenvolvido por Hyago Jose Maria para o Projeto Agrinho 2025</p>
                 <p class="footer-tag">#agrinho #campocidade #sustentabilidade</p>
             </div>
         </div>
